🛠️ Actualización del README y eliminación de archivos obsoletos. Se optimiza la detección de notas en Guitar Hero con un nuevo sistema de polígonos y calibración HSV. Se eliminan scripts y configuraciones no utilizados para mejorar la claridad del proyecto.

--- a/config/config.ini
+++ b/config/config.ini
@@ -94,63 +94,69 @@ yellow_v_max = 255
 score_region = {'left': 1951, 'top': 290, 'width': 237, 'height': 63}
 score_region_relative = {'left': 1627, 'top': 99, 'width': 253, 'height': 62}
 
-[NOTE_LANE_S]
-point_1_x = 918
-point_1_y = 519
-point_2_x = 1020
-point_2_y = 545
-point_3_x = 620
-point_3_y = 876
-point_4_x = 501
-point_4_y = 786
+[LANE_POLYGON_S]
+point_0_x = 165
+point_0_y = 585
+point_1_x = 293
+point_1_y = 691
+point_2_x = 503
+point_2_y = 535
+point_3_x = 370
+point_3_y = 444
+point_count = 4
 
-[NOTE_LANE_D]
-point_1_x = 1029
-point_1_y = 552
-point_2_x = 1150
-point_2_y = 567
-point_3_x = 918
-point_3_y = 965
-point_4_x = 775
-point_4_y = 900
+[LANE_POLYGON_D]
+point_0_x = 432
+point_0_y = 731
+point_1_x = 622
+point_1_y = 807
+point_2_x = 724
+point_2_y = 621
+point_3_x = 563
+point_3_y = 547
+point_count = 4
 
-[NOTE_LANE_F]
-point_1_x = 1166
-point_1_y = 571
-point_2_x = 1277
-point_2_y = 573
-point_3_x = 1223
-point_3_y = 1013
-point_4_x = 1013
-point_4_y = 995
+[LANE_POLYGON_F]
+point_0_x = 703
+point_0_y = 799
+point_1_x = 912
+point_1_y = 827
+point_2_x = 952
+point_2_y = 620
+point_3_x = 762
+point_3_y = 602
+point_count = 4
 
-[NOTE_LANE_J]
-point_1_x = 1284
+[LANE_POLYGON_J]
+point_0_x = 979
+point_0_y = 821
+point_1_x = 1197
+point_1_y = 797
+point_2_x = 1129
+point_2_y = 607
+point_3_x = 973
+point_3_y = 620
+point_count = 4
+
+[LANE_POLYGON_K]
+point_0_x = 1280
+point_0_y = 791
+point_1_x = 1479
+point_1_y = 722
+point_2_x = 1352
+point_2_y = 554
+point_3_x = 1181
+point_3_y = 613
+point_count = 4
+
+[LANE_POLYGON_L]
+point_0_x = 1573
+point_0_y = 691
+point_1_x = 1720
 point_1_y = 575
-point_2_x = 1385
-point_2_y = 561
-point_3_x = 1540
-point_3_y = 992
-point_4_x = 1306
-point_4_y = 1025
-
-[NOTE_LANE_K]
-point_1_x = 1392
-point_1_y = 560
-point_2_x = 1483
-point_2_y = 528
-point_3_x = 1801
-point_3_y = 894
-point_4_x = 1558
-point_4_y = 978
-
-[NOTE_LANE_L]
-point_1_x = 1494
-point_1_y = 523
-point_2_x = 1575
-point_2_y = 461
-point_3_x = 2048
-point_3_y = 763
-point_4_x = 1834
-point_4_y = 878
+point_2_x = 1550
+point_2_y = 443
+point_3_x = 1404
+point_3_y = 539
+point_count = 4
 
