🗑️ Eliminación de archivos obsoletos y refactorización de la configuración. Se eliminan scripts de calibración y métricas no utilizados, así como rangos HSV optimizados. Se mejora la gestión de configuración para un manejo más estricto y modular.

--- a/config/config.ini
+++ b/config/config.ini
@@ -77,18 +77,24 @@ show_ai_decisions = True
 region = {'x': 318, 'y': 190, 'width': 1920, 'height': 1077, 'monitor': 1, 'raw_coords': {'scaled': (199, 119, 1399, 792), 'real': (318, 190, 2238, 1267), 'scale_factor': 0.625}}
 
 [HSV_RANGES]
-green_h_min = 22
-green_s_min = 184
-green_v_min = 253
-green_h_max = 47
-green_s_max = 234
+green_h_min = 50
+green_s_min = 70
+green_v_min = 233
+green_h_max = 56
+green_s_max = 105
 green_v_max = 255
-yellow_h_min = 38
-yellow_s_min = 227
-yellow_v_min = 36
-yellow_h_max = 52
-yellow_s_max = 238
+yellow_h_min = 24
+yellow_s_min = 100
+yellow_v_min = 210
+yellow_h_max = 26
+yellow_s_max = 255
 yellow_v_max = 255
+
+[MORPHOLOGY]
+close_size = 20
+dilate_size = 15
+min_area = 2000
+max_area = 10000
 
 [SCORE]
 score_region = {'left': 1951, 'top': 290, 'width': 237, 'height': 63}
