🗑️ Eliminación de archivos obsoletos y actualización de la configuración. Se eliminan scripts de control de hotkeys, calibración de ventana y detección de notas. Se mejora la gestión de configuración y se añaden nuevas secciones para el agente de IA y el combo. Se optimiza el README para reflejar los cambios en la arquitectura del proyecto.

--- a/requirements.txt
+++ b/requirements.txt
@@ -27,5 +27,11 @@ keyboard>=0.13.5
 colorama>=0.4.6
 PyYAML>=6.0.2
 
+# Interfaz de Entorno para RL
+gymnasium>=0.29.1
+
+# Interacción a bajo nivel (para juegos)
+pydirectinput-rgx
+
 # Para instalación específica con CUDA 12.8 (RTX 5090):
 # pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu128 
