🔧 Actualización del sistema de entrada y mejoras en el visualizador de polígonos. Se reemplaza la dependencia de `pydirectinput-rgx` por `pydirectinput`. Se implementa lógica de pulsaciones automáticas con anti-ban y se optimiza la detección de notas en tiempo real. Se mejora la gestión de teclas y se añaden nuevas funcionalidades para el manejo de notas verdes y amarillas.

--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ PyYAML>=6.0.2
 gymnasium>=0.29.1
 
 # Interacción a bajo nivel (para juegos)
-pydirectinput-rgx
+pydirectinput
 
 # Para instalación específica con CUDA 12.8 (RTX 5090):
 # pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu128 
