--- a/color_pattern_approach/requirements.txt
+++ b/color_pattern_approach/requirements.txt
@@ -3,21 +3,21 @@
 # Dependencies for color detection and screen capture system
 
 # Computer Vision and Image Processing
-opencv-python>=4.11.0
-numpy>=2.1.0
-Pillow>=11.0.0
+opencv-python>=4.9.0
+numpy>=1.26.0
+Pillow>=10.0.0
 
 # Screen Capture
-mss>=10.0.0
+mss>=9.0.1
 pyautogui>=0.9.54
 
 # OCR (Text Recognition)
-easyocr>=1.7.2
-pytesseract>=0.3.13
+easyocr>=1.7.1
+pytesseract>=0.3.10
 
 # System Utilities
 colorama>=0.4.6
 PyYAML>=6.0.2
 
 # Low-level interaction (for games)
-pydirectinput 
+pydirectinput>=1.0.4
