🔧 Actualización de la configuración y mejoras en el sistema de selección de regiones. Se eliminan configuraciones obsoletas y se optimizan las secciones de captura, puntuación y polígonos de carriles. Se implementa un asistente de configuración para facilitar la selección de regiones en la ventana del juego y se sincronizan configuraciones relevantes entre los enfoques de IA y visualización.

--- a/reinforcement_ai_approach/config/config.ini
+++ b/reinforcement_ai_approach/config/config.ini
@@ -2,10 +2,10 @@
 method = mss
 screen_width = 2560
 screen_height = 1440
-game_left = 321
-game_top = 192
-game_width = 1917
-game_height = 1078
+game_left = 309
+game_top = 211
+game_width = 1962
+game_height = 1008
 downscale_factor = 1.0
 fps_limit = 60
 target_monitor = 1
@@ -21,6 +21,8 @@ capture_region_width = 1917
 capture_region_height = 1077
 lane_positions = 300, 600
 note_detection_threshold = 0.75
+last_confirmed_width = 1962
+last_confirmed_height = 1008
 
 [DETECTION]
 capture_fps = 30
@@ -49,29 +51,21 @@ key_press_duration_ms = 50
 simultaneous_keys_max = 6
 
 [AI]
-# Reinforcement Learning Agent Configuration (DQN)
-# -----------------------------------------------------------
-
-# --- Model Hyperparameters ---
-learning_rate = 0.00025       ; Learning rate for AdamW optimizer
-epsilon = 1.0               ; Initial epsilon value (exploration)
-epsilon_decay = 0.9995      ; Epsilon decay factor per training step
-epsilon_min = 0.01          ; Minimum epsilon value (minimum exploration)
-batch_size = 64             ; Batch size for network training
-memory_size = 10000         ; Maximum capacity of experience replay buffer
-target_update_frequency = 1000 ; Frequency (in steps) to update target network
-
-# --- Architecture and Optimizations ---
-double_dqn = True           ; Use Double DQN to reduce Q-value overestimation
-dueling_dqn = True          ; Use Dueling DQN to separate value and advantage estimation
-prioritized_replay = True   ; Use Prioritized Experience Replay for more efficient sampling
-use_mixed_precision = True  ; Use mixed precision to accelerate training on compatible GPUs
-
-# --- Training Configuration ---
-model_save_path = models/dqn_guitar_hero.pth ; Path to save the trained model
-num_episodes = 1000         ; Total number of episodes to train
-max_steps_per_episode = 5000 ; Maximum number of steps (frames) per episode
-save_frequency = 10         ; Frequency (in episodes) to save a model checkpoint
+learning_rate = 0.00025
+epsilon = 1.0
+epsilon_decay = 0.9995
+epsilon_min = 0.01
+batch_size = 64
+memory_size = 10000
+target_update_frequency = 1000
+double_dqn = True
+dueling_dqn = True
+prioritized_replay = True
+use_mixed_precision = True
+model_save_path = models/dqn_guitar_hero.pth
+num_episodes = 1000
+max_steps_per_episode = 5000
+save_frequency = 10
 
 [LOGGING]
 log_level = INFO
@@ -84,9 +78,6 @@ show_debug_window = True
 show_detection_overlay = True
 show_timing_info = True
 show_ai_decisions = True
-
-;[calibration]
-;region = {'x': 318, 'y': 190, 'width': 1920, 'height': 1077, 'monitor': 1, 'raw_coords': {'scaled': (199, 119, 1399, 792), 'real': (318, 190, 2238, 1267), 'scale_factor': 0.625}}
 
 [HSV_RANGES]
 green_h_min = 50
@@ -109,75 +100,80 @@ min_area = 2000
 max_area = 10000
 
 [SCORE]
-score_region = {'left': 1951, 'top': 290, 'width': 237, 'height': 63}
-score_region_relative = {'left': 1627, 'top': 99, 'width': 253, 'height': 62}
+score_region = {'left': 1723, 'top': 250, 'width': 184, 'height': 61}
+score_region_relative = {'left': 1414, 'top': 39, 'width': 184, 'height': 61}
 
 [LANE_POLYGON_S]
-point_0_x = 165
-point_0_y = 585
-point_1_x = 293
-point_1_y = 691
-point_2_x = 503
-point_2_y = 535
-point_3_x = 370
-point_3_y = 444
+point_0_x = 378
+point_0_y = 686
+point_1_x = 374
+point_1_y = 853
+point_2_x = 509
+point_2_y = 863
+point_3_x = 518
+point_3_y = 680
 point_count = 4
 
 [LANE_POLYGON_D]
-point_0_x = 432
-point_0_y = 731
-point_1_x = 622
-point_1_y = 807
-point_2_x = 724
-point_2_y = 621
-point_3_x = 563
-point_3_y = 547
+point_0_x = 596
+point_0_y = 704
+point_1_x = 563
+point_1_y = 830
+point_2_x = 693
+point_2_y = 853
+point_3_x = 728
+point_3_y = 711
 point_count = 4
 
 [LANE_POLYGON_F]
-point_0_x = 703
-point_0_y = 799
-point_1_x = 912
-point_1_y = 827
-point_2_x = 952
-point_2_y = 620
-point_3_x = 762
-point_3_y = 602
+point_0_x = 796
+point_0_y = 816
+point_1_x = 927
+point_1_y = 831
+point_2_x = 960
+point_2_y = 674
+point_3_x = 838
+point_3_y = 682
 point_count = 4
 
 [LANE_POLYGON_J]
-point_0_x = 979
-point_0_y = 821
-point_1_x = 1197
-point_1_y = 797
-point_2_x = 1129
-point_2_y = 607
+point_0_x = 1013
+point_0_y = 847
+point_1_x = 1158
+point_1_y = 835
+point_2_x = 1116
+point_2_y = 683
 point_3_x = 973
-point_3_y = 620
+point_3_y = 725
 point_count = 4
+point_4_x = 792
+point_4_y = 463
 
 [LANE_POLYGON_K]
-point_0_x = 1280
-point_0_y = 791
-point_1_x = 1479
-point_1_y = 722
-point_2_x = 1352
-point_2_y = 554
-point_3_x = 1181
-point_3_y = 613
+point_0_x = 1268
+point_0_y = 886
+point_1_x = 1403
+point_1_y = 819
+point_2_x = 1309
+point_2_y = 699
+point_3_x = 1205
+point_3_y = 768
 point_count = 4
 
 [LANE_POLYGON_L]
-point_0_x = 1573
-point_0_y = 691
-point_1_x = 1720
-point_1_y = 575
-point_2_x = 1550
-point_2_y = 443
-point_3_x = 1404
-point_3_y = 539
+point_0_x = 1490
+point_0_y = 893
+point_1_x = 1640
+point_1_y = 798
+point_2_x = 1510
+point_2_y = 692
+point_3_x = 1397
+point_3_y = 778
 point_count = 4
 
 [COMBO]
-combo_region = {'left': 872, 'top': 108, 'width': 165, 'height': 110}
+combo_region = {'left': 381, 'top': 43, 'width': 213, 'height': 53}
+
+[SONG]
+song_time_region = {'left': 1730, 'top': 22, 'width': 169, 'height': 71}
 
