--- a/reinforcement_ai_approach/config/config.ini
+++ b/reinforcement_ai_approach/config/config.ini
@@ -85,7 +85,7 @@ green_s_min = 80
 green_v_min = 180
 green_h_max = 70
 green_s_max = 200
-green_v_max = 255l
+green_v_max = 255
 yellow_h_min = 24
 yellow_s_min = 100
 yellow_v_min = 210
@@ -174,6 +174,5 @@ point_count = 4
 [COMBO]
 combo_region = {'left': 430, 'top': 43, 'width': 197, 'height': 42}
 
-[SONG]
-song_time_region = {'left': 252, 'top': 98, 'width': 163, 'height': 39}
+
 
