🔧 Actualización del README y mejoras en la estructura del proyecto. Se añaden descripciones más claras para los enfoques de detección por color y aprendizaje por refuerzo, se reorganizan las secciones de instalación y ejecución, y se implementa un asistente de configuración para facilitar la selección de regiones de captura. Se optimizan los archivos de configuración y se eliminan configuraciones obsoletas para mejorar la claridad y el rendimiento del sistema.

--- a/reinforcement_ai_approach/config/config.ini
+++ b/reinforcement_ai_approach/config/config.ini
@@ -2,10 +2,10 @@
 method = mss
 screen_width = 2560
 screen_height = 1440
-game_left = 212
-game_top = 298
-game_width = 1964
-game_height = 856
+game_left = 191
+game_top = 155
+game_width = 1996
+game_height = 1025
 downscale_factor = 1.0
 fps_limit = 60
 target_monitor = 1
@@ -21,8 +21,8 @@ capture_region_width = 1917
 capture_region_height = 1077
 lane_positions = 300, 600
 note_detection_threshold = 0.75
-last_confirmed_width = 1964
-last_confirmed_height = 856
+last_confirmed_width = 1996
+last_confirmed_height = 1025
 
 [DETECTION]
 capture_fps = 30
@@ -99,80 +99,91 @@ dilate_size = 5
 min_area = 300
 max_area = 15000
 
+[OCR_OPTIMIZATION]
+brightness = 0
+contrast = 5
+sharpness = 11
+min_confidence = 70
+min_digits = 1
+max_digits = 8
+max_score_change = 1000
+min_score_change = -1000
+
 [SCORE]
-score_region = {'left': 1625, 'top': 341, 'width': 168, 'height': 43}
-score_region_relative = {'left': 1413, 'top': 43, 'width': 168, 'height': 43}
+score_region = {'left': 1611, 'top': 208, 'width': 156, 'height': 45}
+score_region_relative = {'left': 1420, 'top': 53, 'width': 106, 'height': 45}
 
 [LANE_POLYGON_S]
-point_0_x = 313
-point_0_y = 660
-point_1_x = 316
-point_1_y = 800
-point_2_x = 474
-point_2_y = 799
-point_3_x = 487
-point_3_y = 654
+point_0_x = 320
+point_0_y = 803
+point_1_x = 485
+point_1_y = 803
+point_2_x = 485
+point_2_y = 953
+point_3_x = 320
+point_3_y = 953
 point_count = 4
 
 [LANE_POLYGON_D]
-point_0_x = 554
-point_0_y = 664
-point_1_x = 547
-point_1_y = 798
-point_2_x = 695
-point_2_y = 804
-point_3_x = 703
-point_3_y = 680
+point_0_x = 552
+point_0_y = 804
+point_1_x = 718
+point_1_y = 804
+point_2_x = 718
+point_2_y = 957
+point_3_x = 552
+point_3_y = 957
 point_count = 4
 
 [LANE_POLYGON_F]
-point_0_x = 798
-point_0_y = 657
-point_1_x = 775
-point_1_y = 795
-point_2_x = 955
-point_2_y = 812
-point_3_x = 953
-point_3_y = 662
+point_0_x = 792
+point_0_y = 805
+point_1_x = 960
+point_1_y = 805
+point_2_x = 960
+point_2_y = 958
+point_3_x = 792
+point_3_y = 958
 point_count = 4
 
 [LANE_POLYGON_J]
-point_0_x = 1007
-point_0_y = 678
-point_1_x = 1015
-point_1_y = 813
-point_2_x = 1189
-point_2_y = 799
-point_3_x = 1159
-point_3_y = 662
+point_0_x = 1042
+point_0_y = 795
+point_1_x = 1205
+point_1_y = 795
+point_2_x = 1205
+point_2_y = 957
+point_3_x = 1042
+point_3_y = 957
 point_count = 4
 point_4_x = 792
 point_4_y = 463
 
 [LANE_POLYGON_K]
-point_0_x = 1235
-point_0_y = 688
-point_1_x = 1278
-point_1_y = 826
-point_2_x = 1431
-point_2_y = 787
-point_3_x = 1377
-point_3_y = 655
+point_0_x = 1279
+point_0_y = 800
+point_1_x = 1448
+point_1_y = 800
+point_2_x = 1448
+point_2_y = 951
+point_3_x = 1279
+point_3_y = 951
 point_count = 4
 
 [LANE_POLYGON_L]
-point_0_x = 1457
-point_0_y = 718
-point_1_x = 1561
-point_1_y = 835
-point_2_x = 1676
-point_2_y = 748
-point_3_x = 1592
-point_3_y = 655
+point_0_x = 1519
+point_0_y = 802
+point_1_x = 1685
+point_1_y = 802
+point_2_x = 1685
+point_2_y = 956
+point_3_x = 1519
+point_3_y = 956
 point_count = 4
 
 [COMBO]
-combo_region = {'left': 430, 'top': 43, 'width': 197, 'height': 42}
+combo_region = {'left': 427, 'top': 51, 'width': 236, 'height': 51}
+
 
 
 
